--- a/client/src/components/Bio/Bio.css
+++ b/client/src/components/Bio/Bio.css
@@ -11,12 +11,24 @@
     background: linear-gradient(to right, #ffd194, #70e1f5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     width:100%;
   }
+  h2 {
+    font-family: 'Roboto Slab', serif;
+    letter-spacing: 4px;
+    text-shadow: -1px 0px 10px rgba(0, 0, 0, 1);
+  }
 
 
 h3 {
     font-family: 'Roboto Slab', serif;
     font-size: 20px;
     color: #6a6d72;
+  }
+  .nav-tabs {
+    color:#2d2d30;
+    font-family: 'Roboto Slab', serif;
+    font-size: 16px;
+    letter-spacing: 2px;
+    /* text-shadow: -1px 0px 10px rgba(0, 0, 0, 1); */
   }
   
 .bioPic{
